# iot-esp32-aws-home-automation

./: CMakeLists.txt  README.md  partitions_ota.csv
main/: 4287fc47dcd0e6d587aa758e2f49efad1dfc47fd1404eff6d6badb3fe087ed1a-public.pem.key  CMakeLists.txt  aws_credentials.h  dashboard.html  device_cert.pem.crt  device_key.pem.key  esp32_aws_mqtt.c  main.c  main2.c
